[package]
name = "wsl-dirutils"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/AsPulse/wsl-dirutils"
repository = "https://github.com/AsPulse/wsl-dirutils"
keywords = ["cli", "Japan", "Rust", "wsl"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
once_cell = "1.18.0"
regex = "1.9.3"
wslpath = "0.0.2"
